added css folder, updated gulpfile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="description" content="Leon Gaban">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Leon Gaban | version 9</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:300,700,500,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/css/leongaban9.css">
     <link rel="author" href="humans.txt">
 </head>
 <body>
