--- a/index.html
+++ b/index.html
@@ -4,14 +4,56 @@
     <meta charset="utf-8">
     <meta name="description" content="Leon Gaban">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Leon Gaban | version 9</title>
+    <title>Leon Gaban</title>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:300,700,500,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/leongaban9.css">
     <link rel="author" href="humans.txt">
 </head>
 <body>
-    
-    <h1>Leon Gaban</h1>
-    
+    <div class="main-container">
+        <section class="main-head">
+            <header>
+                <h1>Leon Gaban</h1>
+            </header>
+        </section>
+
+        <section class="content-area">
+            <section class="blog-snippet">
+                <header>
+                    <h1>How to setup Gulp to build an app</h1>
+                </header>
+                <summary class="blog-summary">
+                    <p>Suspendisse molestie arcu vestibulum porttitor pretium. Pellentesque sit amet suscipit turpis. Nam efficitur quis metus ut commodo. Ut nec mi tellus. Donec euismod purus sit amet enim rutrum.</p>
+
+                    <p>Fusce facilisis porttitor libero ac vestibulum. Sed nec nisi mollis, blandit ligula sit amet, cursus metus. Sed sapien purus, congue in erat quis, hendrerit tincidunt mauris.</p>
+                    <button class="read-more">Read post</button>
+                </summary>
+            </section>
+
+            <section class="blog-snippet">
+                <header>
+                    <h1>Think of it as leveling up in life</h1>
+                </header>
+                <summary class="blog-summary">
+                    <p>Suspendisse molestie arcu vestibulum porttitor pretium. Pellentesque sit amet suscipit turpis. Nam efficitur quis metus ut commodo. Ut nec mi tellus. Donec euismod purus sit amet enim rutrum.</p>
+
+                    <p>Fusce facilisis porttitor libero ac vestibulum. Sed nec nisi mollis, blandit ligula sit amet, cursus metus. Sed sapien purus, congue in erat quis, hendrerit tincidunt mauris.</p>
+                    <button class="read-more">Read post</button>
+                </summary>
+            </section>
+
+            <section class="blog-snippet">
+                <header>
+                    <h1>This is the best time to start on the development path</h1>
+                </header>
+                <summary class="blog-summary">
+                    <p>Suspendisse molestie arcu vestibulum porttitor pretium. Pellentesque sit amet suscipit turpis. Nam efficitur quis metus ut commodo. Ut nec mi tellus. Donec euismod purus sit amet enim rutrum.</p>
+
+                    <p>Fusce facilisis porttitor libero ac vestibulum. Sed nec nisi mollis, blandit ligula sit amet, cursus metus. Sed sapien purus, congue in erat quis, hendrerit tincidunt mauris.</p>
+                    <button class="read-more">Read post</button>
+                </summary>
+            </section>
+        </section>
+    </div>
 </body>
 </html>
